// TODO in subprojects

plugins {
    id 'java'
}

java {
    modularity.inferModulePath = true
    sourceCompatibility = JavaVersion.VERSION_15
}

configurations.all {
    exclude group: 'jakarta.annotation', module: 'jakarta.annotation-api'
}

compileJava {
    doFirst {
        options.compilerArgs += [
                '--enable-preview',
                '--module-path', classpath.asPath,
        ]
    }
}

compileTestJava {
    options.compilerArgs += ['--enable-preview']
}

test {
    jvmArgs '--enable-preview'
    useJUnitPlatform()
}